[tool.poetry]
name = "booking-validator"
version = "0.1.0"
description = ""
authors = ["a.zubchyk <Sanch13sanch@gmail.com>"]
readme = "README.md"
packages = [{include = "booking_validator"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^13.15"
aiogram = "^2.23.1"
mypy = "^0.991"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
