[tool.poetry]
name = "booking-validator"
version = "0.1.0"
description = ""
authors = ["a.zubchyk <Sanch13sanch@gmail.com>"]
readme = "README.md"
packages = [{include = "booking_validator"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^13.15"
aiogram = "^2.23.1"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
